--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
         android:text="프로젝트"
         android:id="@+id/text3" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="프로젝트!!!!!!!!"
+        android:id="@+id/text4" />
+
 
 
 </LinearLayout>
